# engineering-metrics

./: .env  .gitignore  README.md  docker-compose.yml  docker.client.Dockerfile  docker.nginx.Dockerfile  docker.server.Dockerfile  package.json
.bin/: install.js  lint.js  migration_add.js  migration_schema.js  start.js  stop.js  test.js
.bin/lib/: dir.js  exec.js
.github/workflows/: pull-request.yml
.tests/: package-lock.json  package.json  tsconfig.json
.tests/environment/: index.ts
.tests/integration/: auth.test.ts
client/: Dockerfile  README.md  index.html  package-lock.json  package.json  plopfile.js  tsconfig.json  webpack.config.js  webpack.config.ts
client/.plop-templates/block/: block.module.scss.hbs  block.stories.tsx.hbs  block.tsx.hbs
client/.plop-templates/container/: container.stories.tsx.hbs
client/.plop-templates/layout/: layout.stories.tsx.hbs  layout.tsx.hbs
client/.plop-templates/page/: page.stories.tsx.hbs
client/.storybook/: main.ts  preview.tsx
client/src/: index.test.ts  index.tsx
client/src/components/blocks/base/: base.module.scss  base.stories.tsx  base.tsx
client/src/components/blocks/box/: box.module.scss  box.stories.tsx  box.tsx
client/src/components/blocks/grid/: grid.module.scss  grid.stories.tsx  grid.tsx
client/src/components/blocks/hstack/: hstack.module.scss  hstack.stories.tsx  hstack.tsx  index.ts
client/src/components/blocks/text/: text.module.scss  text.stories.tsx  text.tsx
client/src/components/blocks/vstack/: index.ts  vstack.module.scss  vstack.stories.tsx  vstack.tsx
client/src/components/containers/login-form/: index.ts  login-controller.tsx
client/src/components/containers/logout-button/: logout-controller.tsx
client/src/components/containers/page-header/: page-header.stories.tsx  page-header.tsx
client/src/components/containers/whoami/: whoami.tsx
client/src/components/layouts/default/: default.module.scss  default.stories.tsx  default.tsx
client/src/components/layouts/shared/: shared.stories.tsx  shared.tsx
client/src/components/login-form/: login-controller.tsx  login-form.tsx
client/src/components/logout-button/: index.ts  logout-button.tsx  logout-controller.tsx
client/src/components/pages/login/: login.stories.tsx  login.tsx
client/src/components/whoami/: whoami.tsx
client/src/environment/: index.ts
client/src/lib/auth/: index.ts
client/src/lib/auth/api/: index.ts  login.test.ts  login.ts  logout.test.ts  logout.ts  refresh.test.ts  refresh.ts  whoami.test.ts  whoami.ts
client/src/lib/auth/hooks/: index.ts  (+10 more)
client/src/lib/common/: api.ts  token.ts  types.ts
client/src/scss/: _border.scss  _breakpoints.scss  _colors.scss  _global.scss  _shadow.scss  _sizes.scss  _spacing.scss  _typography.scss
client/src/utils/: class-mash.ts  nullish.ts  numbers.ts  objects.ts  process-vars.test.ts  process-vars.ts  strings.ts
client/src/views/login-page/: login-page.tsx
json-schema/: .gitignore  README.md  package-lock.json  package.json  run.js
json-schema/src/: schema.json
json-schema/src/auth/: login-request.jtd.json  login-response-success.jtd.json  refresh-request.jtd.json  refresh-response-success.jtd.json  register-request.jtd.json  whoami-response.jtd.json
nginx/: default.conf.template
server/: Cargo.toml  Dockerfile
server/workspace/app/: Cargo.toml
server/workspace/app/src/: main.rs
server/workspace/app/src/controllers/auth/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs  whoami.rs
server/workspace/app/src/database/: mod.rs
server/workspace/app/src/middleware/: bearer_token.rs  mod.rs
server/workspace/app/src/routes/: auth.rs  mod.rs
server/workspace/lib-authentication/: Cargo.toml  README.md
server/workspace/lib-authentication/src/: error.rs  lib.rs  login.rs  token.rs
server/workspace/lib-authentication/src/controllers/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs  whoami.rs
server/workspace/lib-authentication/src/data/: auth.rs  mod.rs  refresh.rs  token.rs
server/workspace/lib-authentication/src/provider/: core.rs  interface.rs  mod.rs
server/workspace/lib-authentication/src/token_repo/: cache.rs  interface.rs  memory.rs  mod.rs
server/workspace/lib-authentication/src/user_repo/: database.rs  interface.rs  memory.rs  mod.rs
server/workspace/lib-base64/: Cargo.toml
server/workspace/lib-base64/src/: decode.rs  encode.rs  error.rs  lib.rs
server/workspace/lib-cache/: Cargo.toml
server/workspace/lib-cache/src/: connection.rs  controller.rs  error.rs  lib.rs
server/workspace/lib-crypto/: Cargo.toml  README.md
server/workspace/lib-crypto/src/: encryption.rs  error.rs  hash.rs  lib.rs  password.rs  rand.rs
server/workspace/lib-crypto/src/hash/: mod.rs  sha256.rs  sha512.rs
server/workspace/lib-database/: Cargo.toml
server/workspace/lib-database-migration/: Cargo.toml
server/workspace/lib-database-migration/src/: lib.rs
server/workspace/lib-database-migration/src/migrations/: m20230226_194527_create_user_credentials_table.rs  mod.rs
server/workspace/lib-database/src/: connection.rs  error.rs  lib.rs
server/workspace/lib-database/src/controllers/: mod.rs  user_credentials.rs
server/workspace/lib-database/src/entities/: mod.rs  prelude.rs  user_credentials.rs
server/workspace/lib-database/src/tables/: mod.rs
server/workspace/lib-database/src/tables/user_credentials/: mod.rs  model.rs
server/workspace/lib-environment/: Cargo.toml
server/workspace/lib-environment/src/: lib.rs
server/workspace/lib-json-schema/: Cargo.toml
server/workspace/lib-json-schema/src/: lib.rs
(+8 files in other folders)
