[workspace]
members = [
    "workspace/app",
    "workspace/lib-authentication",
    "workspace/lib-base64",
    "workspace/lib-cache",
    "workspace/lib-crypto",
    "workspace/lib-database",
    "workspace/lib-database-migration",
    "workspace/lib-environment",
    "workspace/lib-json-schema",
]
