[package]
name = "lib-authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.base64]
version = "0.21"

[dependencies.bytes]
version = "1.4"

[dependencies.lib-crypto]
path = "../lib-crypto"

[dependencies.thiserror]
version = "1.0"
