[package]
name = "lib-authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-trait]
version = "0.1"

[dependencies.bytes]
version = "1.4"

[dependencies.lib-crypto]
path = "../lib-crypto"

[dependencies.lib-environment]
path = "../lib-environment"

[dependencies.thiserror]
version = "1.0"

[dependencies.uuid]
version = "1.3"
features = [
    "v4",
    "serde",
]
