[package]
name = "lib-authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.tokio]
version = "0.3"
features = [
    "rt",
    "macros",
]

[dependencies.async-trait]
version = "0.1"

[dependencies.bytes]
version = "1.4"

[dependencies.lib-crypto]
path = "../lib-crypto"

[dependencies.lib-database]
path = "../lib-database"

[dependencies.lib-environment]
path = "../lib-environment"

[dependencies.log]
version = "0.4"

[dependencies.thiserror]
version = "1.0"

[dependencies.uuid]
version = "1.3"
features = [
    "v4",
    "serde",
]
