[package]
name = "lib-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.deadpool-redis]
version = "0.11"
features = [
    "rt_tokio_1",
]

[dependencies.redis]
version = "0.22"
features = [
    "cluster",
    "tokio-comp",
    "tokio-native-tls-comp",
]

[dependencies.thiserror]
version = "1.0"
