[package]
name = "lib-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.aead]
version = "0.5"
features = [
    "getrandom",
]

[dependencies.chacha20poly1305]
version = "0.10"

[dependencies.sha2]
version = "0.10"

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.proptest]
version = "1.1"
