[package]
name = "lib-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-trait]
version = "0.1"

[dependencies.lib-database-migration]
path = "../lib-database-migration"

[dependencies.log]
version = "0.4"

[dependencies.sea-orm]
version = "0.11"
features = [
    "default",
    "runtime-actix-rustls",
    "sqlx-postgres",
    "sqlx-mysql",
    "sqlx-sqlite",
]

[dependencies.thiserror]
version = "1.0"

[dependencies.uuid]
version = "1.3"
